# flare-grpc-proto

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: access_gateway.proto  capability_service.proto  conversation_service.proto  hooks.proto  media_service.proto  message_service.proto  online.proto  push_service.proto  router.proto  sfu_control.proto  storage_service.proto  sync_service.proto
src/: lib.rs
